@@ -7,5 +7,5 @@ bin_SCRIPTS = varconf-config
 m4datadir = $(datadir)/aclocal
 m4data_DATA = varconf.m4
 
-EXTRA_DIST = autogen.sh varconf.spec.in
+EXTRA_DIST = autogen.sh varconf.spec.in varconf.m4
 
