@@ -4,10 +4,25 @@ dnl Autoconf Initialization
 AC_INIT()
 
 dnl Information
-VARCONF_CURRENT=0
-VARCONF_REVISION=5
-VARCONF_AGE=2
-VARCONF_VERSION=$VARCONF_CURRENT.$VARCONF_REVISION.$VARCONF_AGE
+
+VARCONF_MAJOR=0
+VARCONF_MINOR=5
+VARCONF_MICRO=2
+VARCONF_VERSION=$VARCONF_MAJOR.$VARCONF_MINOR.$VARCONF_MICRO
+
+AC_SUBST(VARCONF_MAJOR)
+AC_SUBST(VARCONF_MINOR)
+AC_SUBST(VARCONF_MICRO)
+AC_SUBST(VARCONF_VERSION)
+
+dnl versioning info for libtool
+VARCONF_CURRENT=`expr $VARCONF_MAJOR + $VARCONF_MINOR`
+VARCONF_REVISION=$VARCONF_MICRO
+VARCONF_AGE=$VARCONF_MINOR
+VARCONF_VERSION_INFO=$VARCONF_CURRENT:$VARCONF_REVISION:$VARCONF_AGE
+
+AC_SUBST(VARCONF_VERSION_INFO)
+
 VARCONF_PACKAGE=varconf
 MIN_SIGC_VERSION=1.0.0
 
