@@ -1,10 +1,10 @@
 ## Process this file with automake to generate Makefile.in
 
-INCLUDES = -I$(top_builddir)
+INCLUDES = -I$(top_srcdir)
 
 lib_LTLIBRARIES = libvarconf.la
-libvarconf_la_LDFLAGS = \
-    -version-info @VARCONF_CURRENT@:@VARCONF_REVISION@:@VARCONF_AGE@
+libvarconf_la_LDFLAGS = -version-info @VARCONF_VERSION_INFO@
+
 libvarconf_la_SOURCES = \
     config.cpp parse_error.cpp variable.cpp \
     dynbase.cpp dyntypes.cpp dyncmp.cpp
